--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <header>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="styles.css">
         <link rel="icon" href="pickafavicon.ico">
         <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@500&family=Pacifico&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Fira+Mono&display=swap" rel="stylesheet"> 
@@ -12,16 +12,16 @@
         <div class="sun">
           <div class="spot"></div>
         </div>
-        <img class="top-cloud" src="images/cloud.png"alt="cloud">
+        <img class="top-cloud" src="cloud.png"alt="cloud">
         <h1 class="name">I'm Siddharth</h1>
         <h2 class="subtitle">a <span style="text-decoration: underline;">pro</span>grammer</h2>
-        <img class="bottom-cloud" src="images/cloud.png"alt="cloud">
-        <img src="images/mountain.png" alt="mountain">
+        <img class="bottom-cloud" src="cloud.png"alt="cloud">
+        <img src="mountain.png" alt="mountain">
     </div>
 
     <div class="middle-container">
         <div class="profile">
-          <img src="images/pickachu.jpg" alt="pp_pic" style="border-radius: 50%; padding: 20px; margin-top: 30px">
+          <img src="pickachu.jpg" alt="pp_pic" style="border-radius: 50%; padding: 20px; margin-top: 30px">
           <h2>Hello.</h2>
           <p style="width: 40%; margin: auto; line-height: 2;">I'm an undergraduate student currently learning Computer Science with an interest in IOT. I enjoy coding and my hobbies include gaming, reading as well as photograph!</p>
         </div>
